--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,7 +10,7 @@ body{
     margin: auto;
     padding:10px;
     padding: 10px;
-    box-shadow: 3px 3px 5px rgb(126, 0, 0));
+    box-shadow: 3px 3px 5px rgb(126, 0, 0);
     
 
 
